// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates typings for module export-from-js 1`] = `
"declare module 'export-from-js' {
    import * as React from 'react';

    export interface ComponentProps {
        foo: string;
    }

    export type Component = React.SFC<ComponentProps>;

}

"
`;

exports[`generates typings for module export-from-jsx 1`] = `
"declare module 'export-from-jsx' {
    import * as React from 'react';

    export interface ComponentProps {
        foo: string;
    }

    export type Component = React.SFC<ComponentProps>;

}

"
`;

exports[`generates typings for module stage-2-syntax 1`] = `
"declare module 'stage-2-syntax' {
    import * as React from 'react';

    export interface MyComponentProps {
        foo: string;
    }

    export class MyComponent extends React.PureComponent<MyComponentProps, any> {
        render(): JSX.Element;

    }

}

"
`;

exports[`generates typings for module with-css-modules 1`] = `
"declare module 'with-css-modules' {
    import * as React from 'react';

    export interface ComponentProps {
        foo: string;
    }

    export type Component = React.SFC<ComponentProps>;

}

"
`;

exports[`generates typings for module with-dependency 1`] = `
"declare module 'with-dependency' {
    import * as React from 'react';

    export interface TestDependencyProps {
        foo: string;
    }

    export type TestDependency = React.SFC<TestDependencyProps>;

    export interface ComponentProps {
        foo: string;
    }

    export default type Component = React.SFC<ComponentProps>;

}

"
`;

exports[`generates typings for module with-es5-dependency 1`] = `
"declare module 'with-es5-dependency' {
    import * as React from 'react';

    export interface ComponentProps {
        foo: string;
    }

    export default type Component = React.SFC<ComponentProps>;

}

"
`;

exports[`generates typings for module with-json-dependency 1`] = `
"declare module 'with-json-dependency' {
    import * as React from 'react';

    export interface ComponentProps {
        foo: string;
    }

    export default type Component = React.SFC<ComponentProps>;

}

"
`;

exports[`generates typings for module with-node-builtin-dependency 1`] = `
"declare module 'with-node-builtin-dependency' {
    import * as React from 'react';

    export interface ComponentProps {
        foo: string;
    }

    export default type Component = React.SFC<ComponentProps>;

}

"
`;
